remove flag in lang selector since it seems broken

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -16,6 +16,6 @@ import Head from "../components/Head.astro";
   </head>
   <body>
     <slot />
-    <LanguageSelector showFlag />
+    <LanguageSelector />
   </body>
 </html>
